@@ -1,3 +1,10 @@
+Tue Feb 11 14:17:44 1997  Samuel Tardieu  <sam@inf.enst.fr>
+
+	* s-gartcp.adb: (Port_To_Network): New function.
+	  (Network_To_Port): New function.
+	  Use these two functions each time a port number is copied to or
+	  from a sin_* structure.
+
 Mon Feb 10 15:11:20 1997  Samuel Tardieu  <sam@inf.enst.fr>
 
 	* 2xgtplsp.ads: New (untested) SNI version of this package.
